Initial upload to Github

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "c64opcodes",
     "displayName": "c64opcodes",
     "description": "C64 Opcodes Helper",
+    "publisher": "willasm",
+    "author": {
+        "name": "William McKeever"
+    },
+    "license": "MIT - SEE LICENSE IN LICENSE.md",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.62.0"
@@ -9,9 +14,29 @@
     "categories": [
         "Other"
     ],
+    "icon": "images/icon.png",
+    "keywords": [
+        "opcodes",
+        "mnemonics",
+        "c64",
+        "commodore",
+        "asm",
+        "assembly",
+        "programming",
+        "breadbin"
+    ],
     "activationEvents": [
         "onCommand:c64opcodes.openOpcodesList"
     ],
+    "bugs": {
+        "url": "https://github.com/willasm/c64opcodes/issues",
+        "email": "willmck63@gmail.com"
+    },
+    "homepage": "https://github.com/willasm/c64opcodes",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/willasm/c64opcodes.git"
+    },
     "main": "./out/extension.js",
     "contributes": {
         "commands": [{
