--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "type": "git",
         "url": "https://github.com/willasm/c64opcodes.git"
     },
-    "main": "./out/extension.js",
+    "main": "./src/extension.js",
     "contributes": {
         "commands": [{
             "command": "c64opcodes.openOpcodesList",
