--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "c64opcodes",
-    "displayName": "c64opcodes",
+    "displayName": "C64 Opcodes",
     "description": "C64 Opcodes Helper",
     "publisher": "willasm",
     "author": {
@@ -37,7 +37,7 @@
         "type": "git",
         "url": "https://github.com/willasm/c64opcodes.git"
     },
-    "main": "./src/extension.js",
+    "main": "src/extension.js",
     "contributes": {
         "commands": [{
             "command": "c64opcodes.openOpcodesList",
@@ -59,25 +59,6 @@
             }
         }]
     },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile && npm run lint",
-        "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
-    },
-    "devDependencies": {
-        "@types/vscode": "^1.62.0",
-        "@types/glob": "^7.1.4",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "14.x",
-        "@typescript-eslint/eslint-plugin": "^4.31.1",
-        "@typescript-eslint/parser": "^4.31.1",
-        "eslint": "^7.32.0",
-        "glob": "^7.1.7",
-        "mocha": "^9.1.1",
-        "typescript": "^4.4.3",
-        "@vscode/test-electron": "^1.6.2"
-    }
+    "scripts": {},
+    "devDependencies": {}
 }
